<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logged_user_navigation"
    app:startDestination="@+id/navHomeFragment">

    <fragment
        android:id="@+id/navHomeFragment"
        android:name="com.hss.hssbanksystem.ui.view.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/navHome"/>

    <fragment
        android:id="@+id/navProfileFragment"
        android:name="com.hss.hssbanksystem.ui.view.user.ProfileFragment"
        android:label="@string/navProfile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navProfileFragment_to_updatePasswordFragment"
            app:destination="@id/updatePasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/updatePasswordFragment"
        android:name="com.hss.hssbanksystem.ui.view.user.UpdatePasswordFragment"
        android:label="@string/updatePassword"
        tools:layout="@layout/fragment_update_password" >
        <action
            android:id="@+id/action_updatePasswordFragment_to_navProfileFragment"
            app:destination="@id/navProfileFragment" />
    </fragment>

</navigation>